# Awesome_Gripper

./: README.md
.devcontainer/: Dockerfile
Bewegungsanalyse/catkin_ws/: .gitmodules
Bewegungsanalyse/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
Bewegungsanalyse/ros2_ws/: .gitmodules
Bewegungsanalyse/ros2_ws/.devcontainer/: Dockerfile  docker-compose.yaml
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/: CMakeLists.txt  package.xml
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/config/: joint_names_gripper.yaml
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/launch/: gazebo.launch.py  moveit_gazebo.launch.py
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/meshes/: link_1_left.STL  link_1_right.STL  link_support_left.STL  link_support_right.STL  mount_link.STL
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/urdf/: gripper.csv  gripper.transmission.xacro  gripper.urdf  gripper.urdf.xacro
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Bewegungsanalyse/ros2_ws/src/descriptions/gripper/urdf/log/: latest_build
Bewegungsanalyse/ros2_ws/src/descriptions/urdf_6_dofra_v3/: CMakeLists.txt  package.xml
Bewegungsanalyse/ros2_ws/src/descriptions/urdf_6_dofra_v3/config/: joint_names_URDF_Assembly_6_DOFRA_v3.yaml  six_dofra_joint_states.yaml
Bewegungsanalyse/ros2_ws/src/descriptions/urdf_6_dofra_v3/launch/: display.launch  gazebo.launch  six_dofra_bringup_moveit_gazebo.launch
Bewegungsanalyse/ros2_ws/src/descriptions/urdf_6_dofra_v3/urdf/: URDF_Assembly_6_DOFRA_v3.xacro  gripper_test.xacro
Bewegungsanalyse/ros2_ws/src/simulations/gazebo_sim/: CMakeLists.txt  package.xml
Bewegungsanalyse/ros2_ws/src/simulations/gazebo_sim/launch/: gazebo_world.launch.py
Dokumentation und Berechnung/: Awesome_Gripper.docx  ~$esome_Gripper.docx  ~WRL2967.tmp
Dokumentation und Berechnung/Auslegung_Greifer/: Berechnung und Auslegung des Greifers (Greifkraftberechnung, Antrieb).sm
Konstruktionsdaten/Assembly/Gripper/: Gripper.SLDASM
Konstruktionsdaten/Assembly/Robot/: Fuehrungsbett.SLDPRT  Gelenk_1_V3.0.SLDASM  Gelenk_3_V3.SLDASM  Glied_6.SLDPRT  Gripper.SLDPRT
Konstruktionsdaten/Parts/External_Parts/: Bauteil_C.SLDPRT
Konstruktionsdaten/Parts/Gripper/: Gripper_FInger.SLDPRT  Gripper_Frame.SLDPRT  Gripper_Frame_2.SLDPRT  Gripper_without_bolts.SLDASM  Hebel.SLDPRT  Hebel_2.SLDPRT  Hebel_Support.SLDPRT  LewanSoul LD-20M  Servo 20kg.SLDPRT  SpiegelnGripper_FInger.SLDPRT  (+1 more)
Konstruktionsdaten/URDF_Assembly_6_DOFRA_v3/: CMakeLists.txt  package.xml
(+328 files in other folders)
