<?xml version="1.0"?>
<package format="3">
  <name>gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gripper</p>
    <p>This package contains configuration data, 3D models, and launch files
for the gripper robot.</p>
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <!-- Export package information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>