<package format="3">
  <name>urdf_6_dofra_v3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf_6_dofra_v3</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf_6_dofra_v3 robot</p>
  </description>

  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>