<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_sim</name>
  <version>0.0.0</version>
  <description>Gazebo Simulation Package for Six-DOF Robot</description>
  <maintainer email="kevin-eppacher@hotmail.de">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      <launch_file>gazebo.launch.py</launch_file>
      <launch_file>spawn_robot.launch.py</launch_file>
    </launch>
  </export>
</package>
